<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LoginyRegister.LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/fondo_login2">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Iniciar sesión"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="Usuario"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:text="INICIAR SESION"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/lightblue" />

    <!-- Tres botones adicionales
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Continuar con Facebook"
        android:layout_marginBottom="8dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Continuar con Google"
        android:layout_marginBottom="8dp"/>
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿No tienes cuenta?"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/registrarseButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/darkblue" />
</LinearLayout>
